# ProjectCode

./: CMakeLists.txt
Given/conf/: config.json
LeapDeveloperKit/Examples/GesturesDemo/src/: GesturesDemo.cpp
crazyflie-pc-client/: README.md
crazyflie-pc-client/.hg/: dirstate  sourcetreeconfig
crazyflie-pc-client/.hg/cache/: branchheads  tags
crazyflie-pc-client/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
crazyflie-pc-client/.hg/store/data/: _c_r_e_d_i_t_s.txt.i  _r_e_a_d_m_e.md.i  bitcraze.ico.i  setup.py.i  ~2ecproject.i  ~2ehgignore.i  ~2ehgtags.i
crazyflie-pc-client/.hg/store/data/examples/: basiclog.py.i  multiramp.py.i  ramp.py.i  scan.py.i
crazyflie-pc-client/.hg/store/data/lib/: cfheadless.py.i
crazyflie-pc-client/.hg/store/data/lib/cfclient/: cfclient.py.i  icon-256.png.i
crazyflie-pc-client/.hg/store/data/lib/cfclient/configs/: config.json.i
crazyflie-pc-client/.hg/store/data/lib/cfclient/ui/: main.py.i  main.ui.i  tab.py.i
crazyflie-pc-client/.hg/store/data/win32install/: cfclient.nsi.tmpl.i  generate__nsis.py.i
libcflie_delivery/: CMakeLists.txt
libcflie_delivery/include/cflie/: CCRTPPacket.h  CCrazyRadio.h  CCrazyflie.h  CTOC.h
libcflie_delivery/src/cflie/: CCRTPPacket.cpp  CCrazyRadio.cpp  CCrazyflie.cpp  CTOC.cpp
libcflie_delivery/src/control/: Battery.cpp  Makefile  a.out  control.cpp  extension.cpp  helper.cpp  helper2.cpp  sample  sample.c  sample2.c  simple.cpp  test.c  test.cpp
libcflie_delivery/src/leap/: #leap.h#  leap_gesture.h  leap_types.h  libLeapC.dylib
(+60 files in other folders)
